--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,12 @@
 # Environment variables example
-# Rename this file to .env and replace the placeholder values with your actual configuration.
 
-VITE_FIREBASE_API_KEY=your_api_key_here
+# Firebase Configuration
+VITE_FIREBASE_API_KEY=your-api-key-here
+VITE_FIREBASE_AUTH_DOMAIN=your-project.firebaseapp.com
+VITE_FIREBASE_PROJECT_ID=your-project-id
+VITE_FIREBASE_STORAGE_BUCKET=your-project.appspot.com
+VITE_FIREBASE_MESSAGING_SENDER_ID=123456789
+VITE_FIREBASE_APP_ID=your-app-id-here
+
+# Google reCAPTCHA Configuration  
+VITE_RECAPTCHA_SITE_KEY=your-recaptcha-site-key-here
