--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "dompurify": "^3.2.7",
     "firebase": "^12.3.0",
+    "lucide-react": "^0.544.0",
+    "prop-types": "^15.8.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-google-recaptcha": "^3.1.0",
@@ -27,6 +29,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.4.0",
+    "stylelint": "^16.24.0",
+    "stylelint-config-standard": "^39.0.0",
     "vite": "^7.1.6"
   }
 }
